styles/main.css
/* ... */
.hamburger-menu .fa-times.open {
    display: block;
}

.hamburger-menu .fa-bars.open {
    display: none;
}

.nav-list {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    list-style: none;
    background-color: #7c4506;
    z-index: 900;
    display: flex;
    flex-direction: column;
    justify-content: center;
    opacity: 0;
    transform: scale(0);
    transition: opacity 550ms;
    /* font-family: 'Open-sans'; */
    /* text-transform: uppercase; */
    font-family: 'Alata';
}

.nav-list.open {
    opacity: 0.99;
    transform: scale(1);
}

.hero-text {
    position: absolute;
    top: 55%;
    left: 50%;
    transform: translate(-50%, -45%);
    text-align: left;
    overflow-wrap: break-word;
    text-wrap: wrap;
}

.nav-link:hover {
    color: indianred !important;
}

.present {
    color: #b7472a;
    letter-spacing: 3px;
    font-weight: 600;
    font-size: large;
}

.title-website {
    /* color: rgb(136, 66, 8) !important; */
    color: #4A2815 !important;
    letter-spacing: 2px;
    font-weight: 400;
    font-size: 60px;
    font-family: 'Alata';
    text-transform: uppercase;
}

.subtitle-website {
    font-size: 45px;
    font-family: 'Courgette';
    text-transform: uppercase;
    letter-spacing: 2px;
    font-weight: 400;
    color: #4A2815;
}

header .btn-custom {
    width: fit-content;
    background: transparent;
    color: #4A2815;
    display: inline-block;
    padding: 13px 24px;
    font-family: "Roboto", sans-serif;
    font-size: 16px;
    font-weight: 400;
    border: 1px solid #4A2815;
    letter-spacing: 4px;
    text-align: center;
    text-transform: uppercase;
    cursor: pointer;
    margin-top: 40px;
}

header .btn-language {
    width: fit-content;
    background: transparent;
    color: #4A2815;
    display: inline-block;
    padding: 13px 34px;
    font-family: "Roboto";
    font-size: 16px;
    border: 2px solid #4A2815;
    letter-spacing: 2px;
}

header .btn-custom:hover {
    background: #b7472a;
    color: #fff;
}

.call-to-action .btn-custom {
    width: fit-content;
    background: transparent;
    color: #4A2815;
    display: inline-block;
    padding: 13px 24px;
    font-family: "Roboto", sans-serif;
    font-size: 16px;
    font-weight: 400;
    border: 1px solid #4A2815;
    letter-spacing: 4px;
    text-align: center;
    text-transform: uppercase;
    cursor: pointer;
    margin-top: 40px;
}

.call-to-action .btn-custom:hover {
    background: #b7472a;
    color: #fff;
}

.sticky-top {
    position: fixed;
}

header .btn-dropdown {
    width: fit-content;
    background-color: transparent;
    color: #4A2815;
    display: inline-block;
    padding: 6px 6px;
    border: 1px solid #4A2815;
}

.header .dropdown-menu {
    width: fit-content !important;
    background-color: transparent !important;
    border: 1px solid #4A2815 !important;
}


/* TODO: create styles for the dropdown in the navbar*/

nav .dropdown-custom {
    float: left;
    overflow: hidden;
}

nav {
    overflow: hidden;
}

nav .drop-btn {
    font-size: 16px;
    border: none;
    outline: none;
    color: black;
    padding: 0.5rem 1rem;
    background-color: inherit;
    font-family: inherit;
    /* Important for vertical align on mobile phones */
    margin: 0;
    /* Important for vertical align on mobile phones */
}

.dropdown-custom:hover .drop-btn {
    background-color: white;
}

.dropdown-custom-content {
    display: none;
    position: absolute;
    background-color: white;
    min-width: 80px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    text-align: center;
    z-index: 1;
}

.dropdown-custom-content a {
    float: none;
    color: black;
    margin: 12px 6px;
    text-decoration: none;
    display: block;
    text-align: left;
}


/* .dropdown-custom-content a:hover {
    background-color: #ddd;
} */

.dropdown-custom:hover .dropdown-custom-content {
    display: block;
}


/* ------------------------------------- Transitions for the header ------------------------------- */

.transition-header {
    width: 100%;
    height: 30vh;
    /* background-color: #FEF7F7; */
    /* background: linear-gradient(white, #FEF7F7); */
    background-image: url(../images/poze/Linie\ Productie-151.jpg);
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
}


/* ---------------------------------- Styles for the buttons ---------------------------------*/

.btn {
    width: 100px;
    padding: 5px 5px 0 0 !important;
    border: 1px solid;
    position: relative;
    overflow: hidden;
}

.boxed-btn {
    width: fit-content;
    background: #AE9154;
    color: #FEF7F7;
    display: inline-block;
    padding: 13px 24px;
    font-family: "Roboto", sans-serif;
    font-size: 16px;
    font-weight: 400;
    /* border: 1px solid #FEF7F7; */
    letter-spacing: 4px;
    text-align: center;
    text-transform: uppercase;
    cursor: pointer;
    margin-top: 40px;
}

.boxed-btn:hover {
    background: #b7472a;
    color: #fff !important;
    border: 1px solid #C49E66;
}

.boxed-btn:focus {
    outline: none;
}

.boxed-btn3 {
    font-family: "Roboto", sans-serif;
    font-size: 13px;
    font-weight: 500;
    color: #fff;
    cursor: pointer;
    padding: 14px 41px;
    text-align: center;
    border: none;
    background-size: 100% 100%;
    border-radius: 50px;
    background-size: 101% 100%;
    background: #FFC000;
    -webkit-transition: 0.5s;
    -moz-transition: 0.5s;
    -o-transition: 0.5s;
    transition: 0.5s;
    display: inline-block;
    border: 1px solid transparent;
}

.boxed-btn3:hover {
    color: #FFC000;
    border: 1px solid #fff;
    background: #fff;
}

.boxed-btn3:focus {
    outline: none;
}
/* ... */

